--- a/package.json
+++ b/package.json
@@ -9,11 +9,25 @@
     "lint": "eslint",
     "mount": "./scripts/mount.sh mount",
     "unmount": "./scripts/mount.sh unmount",
-    "mount:status": "./scripts/mount.sh status"
+    "mount:status": "./scripts/mount.sh status",
+    "pm2:start": "pm2 start ecosystem.config.js",
+    "pm2:stop": "pm2 stop ngsdiag",
+    "pm2:restart": "pm2 restart ngsdiag",
+    "pm2:delete": "pm2 delete ngsdiag",
+    "pm2:logs": "pm2 logs ngsdiag",
+    "pm2:status": "pm2 status",
+    "deploy": "npm run build && npm run pm2:start",
+    "deploy:start": "./scripts/deploy.sh start",
+    "deploy:update": "./scripts/deploy.sh update",
+    "deploy:restart": "./scripts/deploy.sh restart",
+    "deploy:stop": "./scripts/deploy.sh stop"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.16",
+    "bcryptjs": "^3.0.3",
+    "better-sqlite3": "^12.5.0",
     "clsx": "^2.1.1",
+    "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
@@ -26,6 +40,8 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
